--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="form-image">
             <video src="image/bastion-overwatch-moewalls.mp4" loop autoplay></video>
         </div>
+        <div class="text-bg">
+            <p>Coded by <span>Levi</span></p>
+        </div>
         <div class="mobile-bg">
             <video src="image/bastion-overwatch-moewalls.mp4" loop autoplay></video>
         </div>
