--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="container">
         <div class="form-image">
-            <video src="image/bastion-overwatch-moewalls.mp4" loop autoplay></video>
+            <video autoplay loop poster>
+                <source src="image/bastion-overwatch-moewalls.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="text-bg">
             <p>Coded by <span>Levi</span></p>
