--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
     <div class="container">
         <div class="form-image">
             <video autoplay loop poster>
-                <source src="image/bastion-overwatch-moewalls.mp4" type="video/mp4">
+                <source src="image/lineage2-bg.mp4" type="video/mp4">
             </video>
         </div>
         <div class="text-bg">
             <p>Coded by <span>Levi</span></p>
+            <p class="allrights">&copy; NCSOFT Corporation. All rights reserved.</p>
         </div>
         <div class="mobile-bg">
-            <video src="image/bastion-overwatch-moewalls.mp4" loop autoplay></video>
+            <video src="image/lineage2-bg.mp4" loop autoplay></video>
         </div>
         <div class="form">
             <form action="#">
                 <div class="form-header">
                     <div class="title">
-                       <img src="image/Overwatch_2_early_logo.png" alt="">
+                       <img src="image/l2_logo.png" alt="">
                     </div>
                 </div>
 
