--- a/index.html
+++ b/index.html
@@ -12,22 +12,19 @@
 <body>
     <div class="container">
         <div class="form-image">
-            <video autoplay loop poster>
-                <source src="image/lineage2-bg.mp4" type="video/mp4">
-            </video>
+            <img src="image/spider-bg.jpg" alt="">
         </div>
         <div class="text-bg">
             <p>Coded by <span>Levi</span></p>
-            <p class="allrights">&copy; NCSOFT Corporation. All rights reserved.</p>
         </div>
         <div class="mobile-bg">
-            <video src="image/lineage2-bg.mp4" loop autoplay></video>
+            <img src="image/spider-bg.jpg" alt="">
         </div>
         <div class="form">
             <form action="#">
                 <div class="form-header">
                     <div class="title">
-                       <img src="image/l2_logo.png" alt="">
+                       <img src="image/marvel-logo.png" alt="">
                     </div>
                 </div>
 
